// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 20,
    }
  }
>
  <div
    rating={undefined}
  >
    Rating
  </div>
  <div
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    to={
      Object {
        "pathname": "/auth/sign-up",
        "state": Object {
          "referrer": "/materials/undefined/reviews/new",
        },
      }
    }
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": -10,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Avaliar
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`with averageRating renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 20,
    }
  }
>
  <div
    rating="123"
  >
    Rating
  </div>
  <div
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    to={
      Object {
        "pathname": "/auth/sign-up",
        "state": Object {
          "referrer": "/materials/undefined/reviews/new",
        },
      }
    }
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": -10,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Avaliar
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>
  <div
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    to="/materials/undefined/reviews"
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": -10,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Ver avaliações
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 20,
    }
  }
>
  <div
    rating={undefined}
  >
    Rating
  </div>
  <div
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    to="/materials/undefined/reviews/new"
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": -10,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Avaliar
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;
